--- a/config/run_config.json
+++ b/config/run_config.json
@@ -12,7 +12,7 @@
     "freeze_mlp": false,
     "freeze_backbone": true,
     "vision_select_layer": -1,
-    "dataloader_num_workers": 4,
+    "dataloader_num_workers": 1,
     "bf16": true,
     "num_train_epochs": 1,
     "per_device_train_batch_size": 8,
@@ -31,6 +31,7 @@
     "grad_checkpoint": true,
     "group_by_length": false,
     "dynamic_image_size": true,
+    "remove_unused_columns": false,
     "use_thumbnail": true,
     "ps_version": "v2",
     "deepspeed": "zero_stage3_config.json",
