--- a/config/run_config.json
+++ b/config/run_config.json
@@ -12,10 +12,10 @@
     "freeze_mlp": false,
     "freeze_backbone": true,
     "vision_select_layer": -1,
-    "dataloader_num_workers": 1,
+    "dataloader_num_workers": 4,
     "bf16": true,
     "num_train_epochs": 1,
-    "per_device_train_batch_size": 8,
+    "per_device_train_batch_size": 460,
     "gradient_accumulation_steps": 1,
     "evaluation_strategy": "no",
     "save_strategy": "steps",
@@ -34,7 +34,7 @@
     "remove_unused_columns": false,
     "use_thumbnail": true,
     "ps_version": "v2",
-    "deepspeed": "zero_stage3_config.json",
+    "deepspeed": "zero_stage3_config_2.json",
     "report_to": "wandb",
     "mbeir_root": "/home/b3schnei/M-BEIR",
     "mbeir_train_root": "/home/b3schnei/M-BEIR/query/union_train/mbeir_union_up_train.jsonl",
