--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,6 +11,8 @@
             "args": [
                 "--include",
                 "localhost:4",
+                "--master_port",
+                "44000",
                 "/home/b3schnei/mllm/internvl/train/internvl_chat_finetune.py",
                 "~/mllm/config/debug.json"
             ],
