--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -13,11 +13,11 @@
                 "localhost:0",
                 "--master_port",
                 "44000",
-                "/home/b3schnei/mllm/internvl/train/internvl_chat_finetune.py",
+                "/home/b3schnei/vllm/internvl/train/internvl_chat_finetune.py",
                 "~/vllm/config/debug.json"
             ],
             "env": {
-                "PYTHONPATH": "/home/b3schnei/mllm",
+                "PYTHONPATH": "/home/b3schnei/vllm",
                 "WANDB_MODE": "offline"
             }
         },
@@ -33,11 +33,11 @@
                 "localhost:0,1",
                 "--master_port",
                 "44000",
-                "/home/b3schnei/mllm/internvl/train/internvl_chat_finetune.py",
+                "/home/b3schnei/vllm/internvl/train/internvl_chat_finetune.py",
                 "~/vllm/config/lora_last_token.json"
             ],
             "env": {
-                "PYTHONPATH": "/home/b3schnei/mllm",
+                "PYTHONPATH": "/home/b3schnei/vllm",
                 "WANDB_MODE": "offline"
             }
         },
@@ -51,11 +51,11 @@
             "args": [
                 "--include",
                 "localhost:0,2,3,4",
-                "/home/b3schnei/mllm/internvl/train/internvl_chat_finetune.py",
+                "/home/b3schnei/vllm/internvl/train/internvl_chat_finetune.py",
                 "~/vllm/config/pretrain_mlp.json"
             ],
             "env": {
-                "PYTHONPATH": "/home/b3schnei/mllm",
+                "PYTHONPATH": "/home/b3schnei/vllm",
                 "WANDB_MODE": "offline"
             }
         },
@@ -63,12 +63,12 @@
             "name": "debug_dataset",
             "type": "debugpy",
             "request": "launch",
-            "program": "/home/b3schnei/mllm/debug/debug_dataset.py",
+            "program": "/home/b3schnei/vllm/debug/debug_dataset.py",
             "console": "integratedTerminal",
             "args": [],
             "justMyCode": false,
             "env": {
-                "PYTHONPATH": "/home/b3schnei/mllm",
+                "PYTHONPATH": "/home/b3schnei/vllm",
                 "WANDB_MODE": "offline"
             }
         }
