--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -22,26 +22,6 @@
             }
         },
         {
-            "name": "Debug Visualization",
-            "type": "debugpy",
-            "request": "launch",
-            "program": "${env:DEEPSPEED}",
-            "justMyCode": false,
-            "console": "integratedTerminal",
-            "args": [
-                "--include",
-                "localhost:7",
-                "--master_port",
-                "44000",
-                "${env:VLLM_REPO}/visualization/embed.py",
-                "${env:VLLM_REPO}/config/embed/internvl_embedding_model.json"
-            ],
-            "env": {
-                "PYTHONPATH": "${env:VLLM_REPO}",
-                "WANDB_MODE": "offline"
-            }
-        },
-        {
             "name": "Debug Neg Mining",
             "type": "debugpy",
             "request": "launch",
@@ -59,18 +39,21 @@
             }
         },
         {
-            "name": "Debug Visualization",
+            "name": "Debug Embed",
             "type": "debugpy",
             "request": "launch",
-            "program": "${env:VLLM_REPO}/visualization/visualize.py",
+            "program": "${env:DEEPSPEED}",
             "justMyCode": false,
             "console": "integratedTerminal",
             "args": [
-                "${env:HOME}/output/embed/embed_internvl_1000",
-                "5"
+                "--include",
+                "localhost:7",
+                "--master_port",
+                "44000",
+                "${env:VLLM_REPO}/visualization/embed.py",
+                "${env:VLLM_REPO}/config/embed/internvl_embedding_model.json"
             ],
             "env": {
-                "CUDA_VISIBLE_DEVICES": "7",
                 "PYTHONPATH": "${env:VLLM_REPO}",
                 "WANDB_MODE": "offline"
             }
