--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -14,7 +14,7 @@
                 "--master_port",
                 "44000",
                 "${env:VLLM_REPO}/internvl/train/internvl_chat_finetune.py",
-                "${env:VLLM_REPO}/config/debug.json"
+                "${env:VLLM_REPO}/config/experiment/lora/InternVL-8B-Dora-8.json"
             ],
             "env": {
                 "PYTHONPATH": "${env:VLLM_REPO}",
