--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -114,6 +114,19 @@
             }
         },
         {
+            "name": "Debug vLLM",
+            "type": "debugpy",
+            "request": "launch",
+            "program": "${env:VLLM_REPO}/finetune/generate_finetuning_data.py",
+            "justMyCode": false,
+            "console": "integratedTerminal",
+            "args": [],
+            "env": {
+                "PYTHONPATH": "${env:VLLM_REPO}",
+                "WANDB_MODE": "offline"
+            }
+        },
+        {
             "name": "Debug Embed_",
             "type": "debugpy",
             "request": "launch",
