Add instruction masking

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -18,6 +18,7 @@
             ],
             "env": {
                 "PYTHONPATH": "${env:VLLM_REPO}",
+                "WANDB_MODE": "offline"
             }
         },
         {
