--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,6 +2,23 @@
     "version": "0.2.0",
     "configurations": [
         {
+            "name": "Debug Eval",
+            "type": "debugpy",
+            "request": "launch",
+            "program": "${env:VLLM_REPO}/evaluate/eval.py",
+            "justMyCode": false,
+            "console": "integratedTerminal",
+            "args": [
+                "abcQwenVL",
+                "/home/b3schnei/output/QwenVL-8B-Large-Batch"
+            ],
+            "env": {
+                "CUDA_VISIBLE_DEVICES": "0,1,2",
+                "PYTHONPATH": "${env:VLLM_REPO}",
+                "WANDB_MODE": "offline"
+            }
+        },
+        {
             "name": "Debug Finetune Data",
             "type": "debugpy",
             "request": "launch",
@@ -29,11 +46,11 @@
             "console": "integratedTerminal",
             "args": [
                 "--include",
-                "localhost:0,1",
+                "localhost:0",
                 "--master_port",
                 "44000",
                 "${env:VLLM_REPO}/qwen/qwen_train.py",
-                "${env:VLLM_REPO}/config/qwen/QwenVL-8B.json"
+                "${env:VLLM_REPO}/config/qwen/QwenVL-8B-check-save.json"
             ],
             "env": {
                 "PYTHONPATH": "${env:VLLM_REPO}",
