--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -61,11 +61,11 @@
             "console": "integratedTerminal",
             "args": [
                 "--include",
-                "localhost:0,1",
+                "localhost:0",
                 "--master_port",
                 "44000",
                 "${env:VLLM_REPO}/qwen/qwen_train.py",
-                "${env:VLLM_REPO}/config/qwen/QwenVL-8B-check-save.json"
+                "${env:VLLM_REPO}/config/debug_instruct.json"
             ],
             "env": {
                 "PYTHONPATH": "${env:VLLM_REPO}",
