--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -82,7 +82,7 @@
                 "--master_port",
                 "44000",
                 "${env:VLLM_REPO}/qwen/qwen_train.py",
-                "${env:VLLM_REPO}/config/debug_instruct.json"
+                "${env:VLLM_REPO}/config/qwen/QwenVL-8B-Instruct.json"
             ],
             "env": {
                 "PYTHONPATH": "${env:VLLM_REPO}",
