--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,6 +2,23 @@
     "version": "0.2.0",
     "configurations": [
         {
+            "name": "Debug MMeb Eval",
+            "type": "debugpy",
+            "request": "launch",
+            "program": "${env:VLLM_REPO}/evaluate/mmeb_classification.py",
+            "justMyCode": false,
+            "console": "integratedTerminal",
+            "args": [
+                "abcQwenVL",
+                "/home/b3schnei/output/QwenVL-8B-Large-Batch/checkpoint-3000"
+            ],
+            "env": {
+                "CUDA_VISIBLE_DEVICES": "0",
+                "PYTHONPATH": "${env:VLLM_REPO}",
+                "WANDB_MODE": "offline"
+            }
+        },
+        {
             "name": "Debug Parse 4o",
             "type": "debugpy",
             "request": "launch",
@@ -14,6 +31,23 @@
             ],
             "env": {
                 "PYTHONPATH": "${env:VLLM_REPO}",
+            }
+        },
+        {
+            "name": "Debug Eval Imagenet",
+            "type": "debugpy",
+            "request": "launch",
+            "program": "${env:VLLM_REPO}/evaluate/eval_imagenet.py",
+            "justMyCode": false,
+            "console": "integratedTerminal",
+            "args": [
+                "abcQwenVL",
+                "/home/b3schnei/output/QwenVL-8B-Large-Batch"
+            ],
+            "env": {
+                "CUDA_VISIBLE_DEVICES": "0",
+                "PYTHONPATH": "${env:VLLM_REPO}",
+                "WANDB_MODE": "offline"
             }
         },
         {
