--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,6 +2,26 @@
     "version": "0.2.0",
     "configurations": [
         {
+            "name": "Debug DeepSpeed LLava",
+            "type": "debugpy",
+            "request": "launch",
+            "program": "${env:DEEPSPEED}",
+            "justMyCode": false,
+            "console": "integratedTerminal",
+            "args": [
+                "--include",
+                "localhost:4",
+                "--master_port",
+                "44035",
+                "${env:VLLM_REPO}/llava/llava_train.py",
+                "${env:VLLM_REPO}/config/backbone_ablation/LLavaNext-Backbone.json"
+            ],
+            "env": {
+                "PYTHONPATH": "${env:VLLM_REPO}",
+                "WANDB_MODE": "offline"
+            }
+        },
+        {
             "name": "Debug vg Eval",
             "type": "debugpy",
             "request": "launch",
@@ -156,6 +176,7 @@
             ],
             "env": {
                 "PYTHONPATH": "${env:VLLM_REPO}",
+                "WANDB_MODE": "offline"
             }
         },
         {
