[add launch configs]

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -76,6 +76,24 @@
             }
         },
         {
+            "name": "Debug vg Eval2",
+            "type": "debugpy",
+            "request": "launch",
+            "program": "${env:VLLM_REPO}/evaluate/eval_vg_instruct.py",
+            "justMyCode": false,
+            "console": "integratedTerminal",
+            "args": [
+                "abcQwenVL-Instruct",
+                "/home/b3schnei/output/QwenVL-8B-Large-Batch/checkpoint-2000",
+                "/home/b3schnei/output/QwenVL-8B-Instruct-Large/checkpoint-100"
+            ],
+            "env": {
+                "CUDA_VISIBLE_DEVICES": "3",
+                "PYTHONPATH": "${env:VLLM_REPO}",
+                "WANDB_MODE": "offline"
+            }
+        },
+        {
             "name": "Debug vg Eval",
             "type": "debugpy",
             "request": "launch",
